# tsumi

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2025-06-11-191750_initial/: down.sql  up.sql
migrations/2025-06-12-042340_create_users/: up.sql
migrations/2025-06-12-043846_create_account/: up.sql
migrations/2025-06-12-044249_tokens/: down.sql  up.sql
migrations/2025-06-12-045325_posts/: down.sql  up.sql
migrations/2025-06-13-140836_alter_refresh_token/: down.sql  up.sql
migrations/2025-06-13-141540_snake_case/: down.sql  up.sql
migrations/2025-06-14-060443_new_me/: down.sql  up.sql
src/: config.rs  errors.rs  main.rs  models.rs  routes.rs  schema.rs  state.rs  utils.rs
src/db/: schema.rs
src/db/models/: accounts.rs  mod.rs  refresh_token.rs  user_model.rs
src/db/queries/: mod.rs  refresh_tokens.rs
src/handlers/auth/: github.rs  mod.rs  refresh.rs  signin.rs  signout.rs  signup.rs
src/services/: jwt.rs  users.rs
static/: index.js
templates/: base.html  index.html  login.html
