[package]
name = "tsumi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = "0.4.41"
diesel = {version = "2.2.10", features = ["sqlite"]}
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.libsqlite3-sys]
version = "0.33.0"
features = ["bundled"]
