[package]
name = "tsumi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = { version = "0.4.41" , features = ["serde"]}
diesel = {version = "2.2.10", features = ["sqlite", "chrono",
    "returning_clauses_for_sqlite_3_35", "r2d2", "uuid"]}
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
jsonwebtoken = "9.3.1"
http = "1.3.1"
time = "0.3.41"
tower-cookies = "0.11.0"
reqwest = { version = "0.12.20", features = ["json"] }
rand = "0.9.1"
base64 = "0.22.1"
thiserror = "2.0.12"

[dependencies.libsqlite3-sys]
version = "0.33.0"
features = ["bundled"]
